# titanium

./: Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  rust-toolchain.toml  test.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  ghcr.yml  rust-clippy.yml
src/: main.rs
tests/: integration_tests.rs
